--- a/templates/layout.html
+++ b/templates/layout.html
@@ -240,21 +240,7 @@
 		</main>
 
 		<nav id="left" class="column">
-			<h3>Subscribed Modules</h3>
-			<ul>
-				<li><a href="#"><u>Artificial Intelligence</u></a></li>
-				<li><a href="#"><u>Machine Learning</u></a></li>
-				<li><a href="#"><u>Control Engineering</u></a></li>
-			</ul>
-			<h3>Available Modules</h3>
-			<div class="dropdown">
-        <button class="dropbtn">Subscribe Here</button>
-        <div class="dropdown-content">
-          <a href="#">Embedded System</a>
-          <a href="#">High Level Programming</a>
-          <a href="#">Deep Learning</a>
-        </div>
-      </div>
+			{%block mods%} {%endblock%}
 
 		</nav>
 
