--- a/flaskdeadline/templates/new_layout.html
+++ b/flaskdeadline/templates/new_layout.html
@@ -97,6 +97,11 @@
         content: "\2212";
     }
 
+    .size-28{
+    width: 40px;
+    height: 40px;
+    }
+
     .content {
         padding: 0 18px;
         max-height: 0;
@@ -208,6 +213,7 @@
           });
         }
         </script>
+
         </main>
     </div>
 </div>
