--- a/flaskdeadline/templates/new_layout.html
+++ b/flaskdeadline/templates/new_layout.html
@@ -15,6 +15,7 @@
     
 
 <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
     <style>
       .bd-placeholder-img {
@@ -81,8 +82,11 @@
         border: none;
         text-align: left;
         outline: none;
-        font-size: 15px;
+        font-size: 16px;
     }
+    .collapsible-active, .collapsible:hover {
+  text-decoration: underline;
+  }
 
 
     .collapsible:after {
@@ -98,8 +102,8 @@
     }
 
     .size-28{
-    width: 40px;
-    height: 40px;
+    width: 100px;
+    height: 100px;
     }
 
     .content {
@@ -109,6 +113,15 @@
         transition: max-height 0.2s ease-out;
         background-color: #f1f1f1;
     }
+
+    .content-section {
+      background: #ffffff;
+      padding: 10px 20px;
+      border: 1px solid #b5b4b4;
+      width: 35%;
+      border-radius: 3px;
+      margin-bottom: 20px;
+    } 
     .dropbtn {
       background-color: #02606a;
       color: white;
@@ -193,6 +206,7 @@
       {% endwith %}
     
       {%block content%} {%endblock%}
+      
 
       <script>
         var coll = document.getElementsByClassName("collapsible");
@@ -217,10 +231,12 @@
 
 
 
+
     <script src="{{ url_for('static', filename='bootstrap.bundle.min.js') }}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
 
-      <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script><script src="{{ url_for('static', filename='dashboard.js') }}"></script>
+      <script src="https://unpkg.com/feather-icons"></script>
+      <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
   </body>
 </html>
