--- a/flaskdeadline/templates/testing.html
+++ b/flaskdeadline/templates/testing.html
@@ -1,55 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+  <title></title>
+  <script src="https://unpkg.com/feather-icons"></script>
+  <style>
+  .size-18{
+width: 16px;
+height: 16px;
+}
+.size-28{
+width: 24px;
+height: 24px;
+}
+.size-38{
+width: 38px;
+height: 38px;
+}
+.size-48{
+width: 48px;
+height: 48px;
+}
+  </style>
+  <body>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
+    <!-- archive icon change -->
+    <i class="size-18" data-feather="archive"></i>
+    <i class="size-28" data-feather="archive"></i>
+    <i class="size-38" data-feather="archive"></i>
+    <i class="size-48" data-feather="archive"></i>
 
-  <title>
-    Flask Soft UI Dashboard - {% block title %}{% endblock %} | AppSeed
-  </title>
-  
-  <!--     Fonts and icons     -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
-  <!-- Nucleo Icons -->
-  <link href="/static/assets/css/nucleo-icons.css" rel="stylesheet" />
-  <link href="/static/assets/css/nucleo-svg.css" rel="stylesheet" />
-  <!-- Font Awesome Icons -->
-  <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-  <link href="/static/assets/css/nucleo-svg.css" rel="stylesheet" />
-  <!-- CSS Files -->
-  <link id="pagestyle" href="/static/assets/css/soft-ui-dashboard.css?v=1.0.3" rel="stylesheet" />
-
-  <!-- Specific CSS goes HERE -->
-  {% block stylesheets %}{% endblock stylesheets %}
-
-</head>
-<body class="">
-
-
-  {% block content %}{% endblock content %}
-
-
-  <!-- Specific JS goes HERE --> 
-  {% block javascripts %}{% endblock javascripts %}
-
-  <script>
-    var win = navigator.platform.indexOf('Win') > -1;
-    if (win && document.querySelector('#sidenav-scrollbar')) {
-      var options = {
-        damping: '0.5'
-      }
-      Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
-    }
-  </script>
-
-  <!-- Github buttons -->
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
-
-  <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="/static/assets/js/soft-ui-dashboard.min.js?v=1.0.3"></script>
-
-</body>
+    <script>
+      feather.replace()
+    </script>
+  </body>
 </html>
