Added testing to the application

--- a/flaskdeadline/templates/new_home.html
+++ b/flaskdeadline/templates/new_home.html
@@ -92,7 +92,7 @@
       </div>
     {% endfor %}
 
-    <div class="content-section mt-4">
+    <div class="legend-section mt-4">
         <h6>Legend</h6>
         <div class="row">
             <i class="bi bi-people-fill" style="font-size: 1rem;"> - Indicate >50% of people voted for this deadline</i>
@@ -123,7 +123,7 @@
               </h6>
             {%for module in taking%}
                 <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">
+                <a class="nav-link" aria-current="page">
                 <span data-feather="book-open" class="align-text-bottom"></span>
                     {{module.id}} - {{module.title}}
                 </a>
