--- a/flaskdeadline/templates/new_deadline.html
+++ b/flaskdeadline/templates/new_deadline.html
@@ -12,7 +12,7 @@
             <form method="POST" action="">
                 {{ form.hidden_tag() }}
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">New Deadline</legend>
+                    <legend class="border-bottom mb-4">Add New Deadline</legend>
                     <div class="form-group mb-4">
                         {{ form.id.label(class="form-control-label") }}
                         {{ form.id(class="form-control form-control-lg", value = mod.id) }}
