--- a/flaskdeadline/templates/create_mod.html
+++ b/flaskdeadline/templates/create_mod.html
@@ -53,6 +53,32 @@
                         {% endif %}
                     </div>
                     <div class="form-group mb-4">
+                        {{ form.ects.label(class="form-control-label") }}
+                        {% if form.ects.errors %}
+                            {{ form.ects(class="form-control form-control-lg is-invalid" ,placeholder = 5) }}
+                            <div class="invalid-feedback">
+                                {% for error in form.ects.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.ects(class="form-control form-control-lg",placeholder = 5) }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group mb-4">
+                        {{ form.breakdown.label(class="form-control-label") }}
+                        {% if form.breakdown.errors %}
+                            {{ form.breakdown(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.breakdown.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.breakdown(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group mb-4">
                         {{ form.date.label(class="form-control-label") }}
                         {% if form.date.errors %}
                             {{ form.date(class="form-control form-control-lg is-invalid",type="datetime-local") }}
