--- a/flaskdeadline/templates/new_home.html
+++ b/flaskdeadline/templates/new_home.html
@@ -74,8 +74,17 @@
             </div>
                 {%endif%}
             {%endfor%}
+
         </div>
         </div>
+        <div class="d-flex justify-content-start flex-wrap flex-md-nowrap align-items-center pt-1">
+            <h6>Students spent an average of <u>{{hours[title][cw]}}</u> hours on this coursework</h6>
+            <div class="btn-toolbar px-4 mb-2 mb-md-0">
+                <div class="btn-group ml-2">
+                <a type="button" class="btn btn-sm btn-outline-secondary" href="/feedback/{{title}}/{{cw}}">Give Feedback</a>
+                </div>
+            </div>
+            </div>
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-1 mt-1 mb-1 text-muted text-uppercase"></h6>
         {%endfor%}
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-2 mt-2 mb-2 text-muted text-uppercase"></h6>
@@ -150,3 +159,34 @@
         </div>
     </nav>
 {%endblock mods%}
+
+{% block graph %}
+<!-- <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+<script>
+const ctx = document.getElementById('myChart')
+    // eslint-disable-next-line no-unused-vars
+const myChart = new Chart(ctx, {
+  type: 'line',
+  data: {
+    labels: [2,3,4,5,6,7],
+    datasets: [{
+        data: [1,2,3,4,5,6],
+        label: "Alberta",
+        borderColor: "#3e95cd",
+        fill: false
+      }
+    ]
+  },
+  options: {
+    title: {
+      display: true,
+      text: 'Positive Cases of COVID in provinces of Canada'
+    },
+    hover: {
+     mode: 'index',
+     intersect: true
+    },
+  }
+});
+</script> -->
+{%endblock graph%}
