--- a/flaskdeadline/templates/new_layout.html
+++ b/flaskdeadline/templates/new_layout.html
@@ -16,6 +16,7 @@
 
 <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"></script>
 
     <style>
       .bd-placeholder-img {
@@ -203,6 +204,7 @@
     {%block mods%} {%endblock%}
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+      
       {%block header%} {%endblock%}
       {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
@@ -215,7 +217,9 @@
       {% endwith %}
     
       {%block content%} {%endblock%}
-      
+
+      {%block graph%} {%endblock%}
+    
 
       <script>
         var coll = document.getElementsByClassName("collapsible");
@@ -233,6 +237,7 @@
           });
         }
         </script>
+
 
         </main>
     </div>
