--- a/flaskdeadline/templates/new_layout.html
+++ b/flaskdeadline/templates/new_layout.html
@@ -73,6 +73,9 @@
       display: inline-block !important;
   
       }
+      .detail-content {
+        white-space: pre-line;
+      }
 
       .collapsible {
         background-color: #777;
