--- a/flaskdeadline/templates/edit_breakdown.html
+++ b/flaskdeadline/templates/edit_breakdown.html
@@ -12,46 +12,36 @@
             <form method="POST" action="">
                 {{ form.hidden_tag() }}
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Add Module Responsibility</legend>
-                    <div class="form-group mb-4">
-                        {{ form.id.label(class="form-control-label") }}
-                        {% if form.id.errors %}
-                            {{ form.id(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.id.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.id(class="form-control form-control-lg") }}
-                        {% endif %}
-                    </div>
+                    <legend class="border-bottom mb-4">Edit Coursework Breakdown</legend>
                     <div class="form-group mb-4">
                         {{ form.title.label(class="form-control-label") }}
-                        {% if form.title.errors %}
-                            {{ form.title(class="form-control form-control-lg is-invalid") }}
+                        {{ form.title(class="form-control form-control-lg" ,value = cwk.module.title) }}
+                    </div>
+                    <div class="form-group mb-4">
+                        {{ form.coursework_title.label(class="form-control-label") }}
+                        {% if form.coursework_title.errors %}
+                            {{ form.coursework_title(class="form-control form-control-lg is-invalid" ,value = cwk.title) }}
                             <div class="invalid-feedback">
-                                {% for error in form.title.errors %}
+                                {% for error in form.coursework_title.errors %}
                                     <span>{{ error }}</span>
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.title(class="form-control form-control-lg") }}
+                            {{ form.coursework_title(class="form-control form-control-lg",value = cwk.title) }}
                         {% endif %}
                     </div>
                     <div class="form-group mb-4">
-                        {{ form.ects.label(class="form-control-label") }}
-                        {% if form.ects.errors %}
-                            {{ form.ects(class="form-control form-control-lg is-invalid")}}
+                        {{ form.breakdown.label(class="form-control-label") }}
+                        {% if form.breakdown.errors %}
+                            {{ form.breakdown(class="form-control form-control-lg is-invalid") }}
                             <div class="invalid-feedback">
-                                {% for error in form.ects.errors %}
+                                {% for error in form.breakdown.errors %}
                                     <span>{{ error }}</span>
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.ects(class="form-control form-control-lg")}}
+                            {{ form.breakdown(class="form-control form-control-lg") }}
                         {% endif %}
-                        
                     </div>
                 </fieldset>
                 <div class="form-group mb-4">
