--- a/flaskdeadline/templates/update_mod.html
+++ b/flaskdeadline/templates/update_mod.html
@@ -39,6 +39,19 @@
                             {{ form.title(class="form-control form-control-lg", value = mod.title) }}
                         {% endif %}
                     </div>
+                    <div class="form-group mb-4">
+                        {{ form.ects.label(class="form-control-label") }}
+                        {% if form.ects.errors %}
+                            {{ form.ects(class="form-control form-control-lg is-invalid" ,placeholder = 5) }}
+                            <div class="invalid-feedback">
+                                {% for error in form.ects.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.ects(class="form-control form-control-lg",placeholder = 5) }}
+                        {% endif %}
+                    </div>
                 </fieldset>
                 <div class="form-group mb-4">
                     {{ form.submit(class="btn btn-outline-info") }}
