doing access control, need to find a way to do error message

--- a/flaskdeadline/templates/new_home.html
+++ b/flaskdeadline/templates/new_home.html
@@ -61,7 +61,9 @@
                 {%if element[3][1]%}
                 <i class="bi bi-briefcase-fill" style="font-size: 1.1rem;"></i>
                 {% endif %}
+                {%if element[3][3]%}
                 <i class="bi bi-mortarboard-fill" style="font-size: 1.1rem;"></i>
+                {% endif %}
                 <span>)</span>
 
             </h6>
