--- a/flaskdeadline/templates/new_layout.html
+++ b/flaskdeadline/templates/new_layout.html
@@ -26,6 +26,7 @@
         -moz-user-select: none;
         user-select: none;
       }
+      
 
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
@@ -196,8 +197,8 @@
   </button>
     <div class="navbar-nav">
         <div class="nav-item text-nowrap">
-          <a class="nav-link px-3" href="{{url_for('login')}}">Login</a>
-          <a class="nav-link px-3" href="/?slo">Register</a>
+          <a class="nav-link px-3" href="/?sso">Login</a>
+          <a class="nav-link px-3" href="/?slo">Logout</a>
         </div>
   </div>
 </header>
