--- a/flaskdeadline/templates/index.html
+++ b/flaskdeadline/templates/index.html
@@ -1,8 +1,220 @@
-{% extends "new_layout.html" %}
 
-{% block content %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.98.0"> -->
+    <title>EEE Deadline Discovery Tool</title>
 
-{% if errors %}
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/dashboard/">
+
+    
+
+    
+
+<link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"></script>
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+      .b-example-divider {
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
+
+      .b-example-vr {
+        flex-shrink: 0;
+        width: 1.5rem;
+        height: 100vh;
+      }
+
+      .bi {
+        vertical-align: -.125em;
+        fill: currentColor;
+      }
+
+      .nav-scroller {
+        position: relative;
+        z-index: 2;
+        height: 2.75rem;
+        overflow-y: hidden;
+      }
+
+      .nav-scroller .nav {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-bottom: 1rem;
+        margin-top: -1px;
+        overflow-x: auto;
+        text-align: center;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+      }
+      .nav-link {
+      display: inline-block !important;
+  
+      }
+      .detail-content {
+        white-space: pre-line;
+      }
+
+      .collapsible {
+        background-color: #777;
+        color: white;
+        cursor: pointer;
+        padding: 10px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 16px;
+    }
+    .collapsible-active, .collapsible:hover {
+  text-decoration: underline;
+  }
+
+
+    .collapsible:after {
+        content: '\002B';
+        color: white;
+        font-weight: bold;
+        float: right;
+        margin-left: 5px;
+    }
+
+    .active:after {
+        content: "\2212";
+    }
+
+    .size-28{
+    width: 100px;
+    height: 100px;
+    }
+
+    .content {
+        padding: 0 18px;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.2s ease-out;
+        background-color: #f1f1f1;
+    }
+    .content-section {
+      background: #ffffff;
+      padding: 10px 20px;
+      border: 1px solid #b5b4b4;
+      width: 100%;
+      border-radius: 3px;
+      margin-bottom: 20px;
+    } 
+
+    .legend-section {
+      background: #ffffff;
+      padding: 10px 20px;
+      border: 1px solid #b5b4b4;
+      width: 35%;
+      border-radius: 3px;
+      margin-bottom: 20px;
+    } 
+    .dropbtn {
+      background-color: #02606a;
+      color: white;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+
+    .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+
+    .article-content {
+      border-right-style: solid;
+      border-right-color: rgb(110, 110, 110);
+  }
+  body {
+    background: linear-gradient(rgba(195, 255, 255, 0.5), rgba(195,255,255,.5)), url('/static/background.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    
+}
+
+    .dropdown-content a:hover {background-color: #ddd;}
+
+    .dropdown:hover .dropdown-content {display: block;}
+
+    .dropdown:hover .dropbtn {background-color: #214850;}
+
+    </style>
+
+    
+    <!-- Custom styles for this template -->
+    <link href="{{ url_for('static', filename='dashboard.css') }}" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  </head>
+  <body>
+    
+<header class="navbar navbar-dark sticky-top bg-primary flex-md  p-0 shadow">
+  {%if staff%}
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="">EEE Deadline Discovery Tool</a>
+  {%else%}
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="">EEE Deadline Discovery Tool</a>
+  {%endif%}
+  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="navbar-nav">
+        <div class="nav-item text-nowrap">
+          <a class="nav-link px-3" href="/?sso">Login</a>
+          <a class="nav-link px-3" href="/?slo">Logout</a>
+        </div>
+  </div>
+</header>
+
+<div class="container">
+  <div class="text-center mt-5 pt-5">
+      <!-- <h1>A Bootstrap 5 Starter Template</h1>
+      <p class="lead">A complete project boilerplate built with Bootstrap</p>
+      <p>Bootstrap v5.1.3</p> -->
+  {% if errors %}
   <div class="alert alert-danger" role="alert">
     <strong>Errors:</strong>
     <ul class="list-unstyled">
@@ -25,28 +237,26 @@
 {% endif %}
 
 {% if paint_logout %}
-  {% if attributes %}
-    <table class="table table-striped">
-      <thead>
-        <th>Name</th><th>Values</th>
-      </thead>
-      <tbody>
-        {% for attr in attributes %}
-          <tr><td>{{ attr.0 }}</td>
-          <td><ul class="list-unstyled">
-            {% for val in attr.1 %}
-              <li>{{ val }}</li>
-            {% endfor %}
-          </ul></td></tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  {% else %}
-    <div class="alert alert-danger" role="alert">You don't have any attributes</div>
-  {% endif %}
+
   <a href="?slo" class="btn btn-danger">Logout</a>
 {% else %}
-  <a href="?sso" class="btn btn-primary">Login</a> <a href="?sso2" class="btn btn-info">Login and access to attrs page</a>
+  <h1 style="font-family:verdana sans-serif"><b>Welcome To EEE Deadline Discovery Tool!</b></h1>
+  <div class="text-center mt-5 pb-3"></div>
+  <h3 style="font-family:verdana sans-serif;padding-bottom: 30px"><b>Please Login Using Your Imperial Account:</b></h3>
+  <a href="?sso" class="btn btn-primary">Login</a>
+</div>
 {% endif %}
+</div>
+</div>
 
-{% endblock %}
+
+
+
+    <script src="{{ url_for('static', filename='bootstrap.bundle.min.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+
+      <script src="https://unpkg.com/feather-icons"></script>
+      <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
+  </body>
+</html>
