--- a/flaskdeadline/templates/index.html
+++ b/flaskdeadline/templates/index.html
@@ -102,6 +102,12 @@
         margin-left: 5px;
     }
 
+    /* .container{
+      background-color: rgba(160, 252, 249, 0.773);
+      width:50%;
+      height:50%;
+    } */
+
     .active:after {
         content: "\2212";
     }
@@ -169,7 +175,7 @@
       border-right-color: rgb(110, 110, 110);
   }
   body {
-    background: linear-gradient(rgba(195, 255, 255, 0.5), rgba(195,255,255,.5)), url('/static/background.jpg');
+    background: linear-gradient(rgba(195, 255, 255, 0.9), rgba(195,255,255,.3)), url('/static/background.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
