--- a/flaskdeadline/templates/create_mod.html
+++ b/flaskdeadline/templates/create_mod.html
@@ -79,6 +79,20 @@
                         {% endif %}
                     </div>
                     <div class="form-group mb-4">
+                        {{ form.start_date.label(class="form-control-label") }}
+                        {% if form.start_date.errors %}
+                            {{ form.start_date(class="form-control form-control-lg is-invalid",type="datetime-local") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.date.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.start_date(class="form-control form-control-lg",type="datetime-local") }}
+                        {% endif %}
+                        
+                    </div>
+                    <div class="form-group mb-4">
                         {{ form.date.label(class="form-control-label") }}
                         {% if form.date.errors %}
                             {{ form.date(class="form-control form-control-lg is-invalid",type="datetime-local") }}
