--- a/flaskdeadline/templates/staff_mod.html
+++ b/flaskdeadline/templates/staff_mod.html
@@ -40,16 +40,69 @@
                         {% endif %}
                     </div>
                     <div class="form-group mb-4">
+                        {{ form.coursework_title.label(class="form-control-label") }}
+                        {% if form.coursework_title.errors %}
+                            {{ form.coursework_title(class="form-control form-control-lg is-invalid" ,placeholder = "Coursework 1") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.coursework_title.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.coursework_title(class="form-control form-control-lg",placeholder = "Coursework 1") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group mb-4">
                         {{ form.ects.label(class="form-control-label") }}
                         {% if form.ects.errors %}
-                            {{ form.ects(class="form-control form-control-lg is-invalid")}}
+                            {{ form.ects(class="form-control form-control-lg is-invalid" ,placeholder = 5) }}
                             <div class="invalid-feedback">
                                 {% for error in form.ects.errors %}
                                     <span>{{ error }}</span>
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.ects(class="form-control form-control-lg")}}
+                            {{ form.ects(class="form-control form-control-lg",placeholder = 5) }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group mb-4">
+                        {{ form.breakdown.label(class="form-control-label") }}
+                        {% if form.breakdown.errors %}
+                            {{ form.breakdown(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.breakdown.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.breakdown(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group mb-4">
+                        {{ form.start_date.label(class="form-control-label") }}
+                        {% if form.start_date.errors %}
+                            {{ form.start_date(class="form-control form-control-lg is-invalid",type="datetime-local") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.date.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.start_date(class="form-control form-control-lg",type="datetime-local") }}
+                        {% endif %}
+                        
+                    </div>
+                    <div class="form-group mb-4">
+                        {{ form.date.label(class="form-control-label") }}
+                        {% if form.date.errors %}
+                            {{ form.date(class="form-control form-control-lg is-invalid",type="datetime-local") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.date.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.date(class="form-control form-control-lg",type="datetime-local") }}
                         {% endif %}
                         
                     </div>
