--- a/flaskdeadline/templates/lin_opt.html
+++ b/flaskdeadline/templates/lin_opt.html
@@ -14,7 +14,7 @@
           <form method="POST" action="">
               {{ form.hidden_tag() }}
               <fieldset class="form-group">
-                  <legend class="border-bottom mb-4">Select Modules to Compare</legend>
+                  <legend class="border-bottom mb-4">Scheduling and Workload Analysis</legend>
                   <div class="form-group mb-4">
                       {{ form.c1.label(class="form-control-label") }}
                       {% if form.c1.errors %}
@@ -93,7 +93,6 @@
 
 {%endblock content%}
 
-
 {% block mods %}
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="position-sticky pt-3">
@@ -104,20 +103,6 @@
                     {{user.name}}
                 </a>
             </li>
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-                <span>Responsible For:</span>
-                <a class="link-secondary" href="{{url_for('new_staff_mod')}}" aria-label="Add a new mdoule">
-                    <span data-feather="plus-circle" class="align-text-bottom"></span>
-                  </a>
-              </h6>
-            {%for module in taking%}
-                <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/staff/remove/{{module.title}}">
-                <span data-feather="book-open" class="align-text-bottom"></span>
-                    {{module.id}} - {{module.title}}
-                </a>
-                </li>
-            {% endfor %}
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
                 <span>Available Modules</span>
               </h6>
@@ -137,8 +122,10 @@
     </nav>
 {%endblock mods%}
 
+
 {% block graph %}
 {% if label %}
+    <h6>Graph below shows the Intensity of the workload per day. 100 means a student have to do a workload of 1 ECTS on that particular day.</h6>
   <canvas class="my-4 w-100" id="myIDChart" width="900" height="380"></canvas>
 {%endif%}
 <script>
@@ -150,20 +137,32 @@ const myChart = new Chart(ctx, {
     labels: {{label|safe}},
     datasets: [{
         data: {{date[0]|safe}},
-        label: "Biomedical Electronics, Coursework 1",
+        label: "{{cwk[0]|safe}}",
         borderColor: "#3e95cd",
         fill: false
       },
       {
         data: {{date[1]|safe}},
-        label: "Communication Networks, Coursework 1",
+        label: "{{cwk[1]|safe}}",
         borderColor: "red",
         fill: false
       },
       {
         data: {{date[2]|safe}},
-        label: "Communication Networks, Coursework 2",
+        label: "{{cwk[2]|safe}}",
         borderColor: "green",
+        fill: false
+      },
+      {
+        data: {{date[3]|safe}},
+        label: "{{cwk[3]|safe}}",
+        borderColor: "yellow",
+        fill: false
+      },
+      {
+        data: {{date[4]|safe}},
+        label: "{{cwk[4]|safe}}",
+        borderColor: "cyan",
         fill: false
       }
     ]
@@ -171,7 +170,7 @@ const myChart = new Chart(ctx, {
   options: {
     title: {
       display: true,
-      text: 'Positive Cases of COVID in provinces of Canada'
+      text: 'Intensity and workload for students'
     },
     hover: {
      mode: 'index',
