--- a/flaskdeadline/templates/new_home.html
+++ b/flaskdeadline/templates/new_home.html
@@ -159,7 +159,7 @@
             {% endfor %}
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
                 <span>Available Modules</span>
-                <a class="link-secondary" href="{{url_for('new_mod')}}" aria-label="Add a new mdoule">
+                <a class="link-secondary" href="{{url_for('students.new_mod')}}" aria-label="Add a new mdoule">
                   <span data-feather="plus-circle" class="align-text-bottom"></span>
                 </a>
               </h6>
