--- a/flaskdeadline/templates/new_layout.html
+++ b/flaskdeadline/templates/new_layout.html
@@ -188,9 +188,9 @@
     
 <header class="navbar navbar-dark sticky-top bg-primary flex-md  p-0 shadow">
   {%if staff%}
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="{{url_for('staff')}}">EEE Deadline Discovery Tool</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="{{url_for('teach.staff')}}">EEE Deadline Discovery Tool</a>
   {%else%}
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="{{url_for('home')}}">EEE Deadline Discovery Tool</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="{{url_for('students.home')}}">EEE Deadline Discovery Tool</a>
   {%endif%}
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
