--- a/flaskdeadline/templates/staff.html
+++ b/flaskdeadline/templates/staff.html
@@ -78,7 +78,7 @@
             </li>
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
                 <span>Responsible For:</span>
-                <a class="link-secondary" href="{{url_for('new_staff_mod')}}" aria-label="Add a new mdoule">
+                <a class="link-secondary" href="{{url_for('teach.new_staff_mod')}}" aria-label="Add a new mdoule">
                     <span data-feather="plus-circle" class="align-text-bottom"></span>
                   </a>
               </h6>
