--- a/flaskdeadline/templates/new_staff.html
+++ b/flaskdeadline/templates/new_staff.html
@@ -68,7 +68,7 @@
             {%for module in taking%}
                 {%for cwk in module.module_cw%}
                   {%if cwk.title == cw and cwk.module.title == title%}
-                    <h6 class="detail-content"><u>Details of Module:</u><br>Worth <a href='/staff/breakdown/{{title}}/{{cw}}'>{{cwk.breakdown}}%</a> of Module<br>{{module.content}}</h6>
+                    <h6 class="detail-content"><u>Details of Module:</u><br>Worth <a href='/staff/cw/edit/{{title}}/{{cw}}'>{{cwk.breakdown}}%</a> of Module<br>Start Date: {{start[title][cw].strftime('%d %b, %Y / Time: %H:%M')}}<br>{%if module.content%}{{module.content}}{%endif%}</h6>
                   {%endif%}
                 {%endfor%}
               
@@ -141,7 +141,7 @@
             {%for module in avail_modules%}
                 {%if module.title == title%}
             <div class = "col-lg d-flex mb-1 mt-1">
-                <h6><u>Details of Module:</u><br> {{module.content}}</h6>
+                <h6><u>Details of Module:</u><br> {%if module.content%}{{module.content}}{%endif%}</h6>
             </div>
                 {%endif%}
             {% endfor %}
